# nexQL

./: .gitignore  __init__.py  ai_helpers.py  launch.sh  nexql-workbench.desktop  nexql_workbench.py  observability_features.py  package-lock.json  package.json  pyproject.toml  sdk_integration_features.py  security_features.py  team_enterprise_features.py  visualization_features.py
docs/: architecture.md  nql_logic.md
ide/electron/: main.js
ide/frontend/: index.html  preload.js
ide/ipc/: bridge.js
nexql_ast/: __init__.py  nodes.py
parser/: __init__.py  lexer.py  parser.py  tokens.py
planner/: __init__.py  planner.py
plugins/: __init__.py  loader.py
runtime/: __init__.py  ai_helpers.py  edge.py  executor.py  observability.py  security.py  server_entry.py  team_features.py  visualization.py
schema/: __init__.py  registry.py
sdk/: __init__.py  generator.py  integration_features.py
spec/: language.md
storage/: __init__.py  store.py
tests/: __init__.py  test_golden.py  test_pipeline.py
transport/: __init__.py  server.py
validator/: __init__.py  validator.py
