[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "piql"
version         = "0.2.0"
description     = "Piql — Packed Query Language runtime engine"
readme          = "docs/architecture.md"
license         = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies    = []   # zero runtime deps; msgpack is optional

[project.optional-dependencies]
dev  = ["pytest>=7", "pytest-cov"]
fast = ["msgpack>=1.0"]

[project.scripts]
piql = "nexql.runtime.server_entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexql*"]

[tool.pytest.ini_options]
testpaths = ["nexql/tests"]
addopts   = "-v --tb=short"
